--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/nodemailer": "^6.4.15",
     "@types/speakeasy": "^2.0.10",
     "@vitalets/google-translate-api": "^9.2.0",
@@ -55,6 +56,7 @@
     "bull": "^4.16.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "csv-writer": "^1.6.0",
     "date-fns": "^3.6.0",
     "file-type-mime": "^0.4.3",
@@ -65,6 +67,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
+    "nestjs-pino": "^4.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
