docs(projects): delete project feature
- delete project service, controller, docs
- test file for project service
- updated project schema

--- a/package.json
+++ b/package.json
@@ -21,16 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky install",
     "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js",
-    "typeorm": "npx typeorm -- -d dist/DB/migrate.ts",
-    "migration:create": "npx typeorm migration:create db/migrations/migration",
-    "premigration:generate": "npm run build",
-    "migration:generate": "npm run build && npx typeorm migration:generate db/migrations/migration -d dist/src/database/data-source",
-    "premigration:run": "npm run build",
-    "migration:run": "npx typeorm migration:run -d dist/src/database/data-source",
-    "migration:revert": "npx typeorm migration:revert -d dist/src/database/data-source",
-    "seed": "ts-node src/seed.ts",
-    "postinstall": "npm install --platform=linux --arch=x64 sharp"
+    "check-lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -118,23 +109,6 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
