--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,15 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "@config/*": ["./config/*"],
-      "@constant/*": ["src/constant/*"],
-      "@helpers/*": ["src/helpers/*"],
-      "@user/*": ["src/modules/user/*"],
-      "@auth/*": ["src/modules/auth/*"],
-      "@shared/*": ["src/shared/*"],
-      "@db/*": ["src/database/*"],
-      "@entities/*": ["src/entities/*"]
+      // "@/*": ["src/*"],
+      // "@config/*": ["./config/*"],
+      // "@constant/*": ["src/constant/*"],
+      // "@helpers/*": ["src/helpers/*"],
+      // "@user/*": ["src/modules/user/*"],
+      // "@auth/*": ["src/modules/auth/*"],
+      // "@shared/*": ["src/shared/*"],
+      // "@db/*": ["src/database/*"],
+      // "@entities/*": ["src/entities/*"]
     },
     "incremental": true,
     "skipLibCheck": true,
