--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/bull": "^10.2.0",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -45,6 +46,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.0",
+    "cache-manager": "^5.7.6",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -83,6 +86,7 @@
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.10",
     "@types/bcrypt": "^5.0.2",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
