--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:render": "export NODE_OPTIONS=–max-old-space-size=420 && node dist/src/main.js",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "dev": "PROFILE=local ./node_modules/.bin/ts-node-dev -r dotenv/config --respawn src/main",
